# full_base_code

backend/: .env.development  .env.production  .gitignore  Dockerfile  ProdDockerfile  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/core/: api_version.py
backend/app/core/settings/: __init__.py
backend/app/dependencies/: anthropic_session.py  execution_time.py  openai_session.py
backend/app/prompts/: analyses.py
backend/app/router/v1/: api.py
backend/app/router/v1/endpoint/: __init__.py  analyses.py
backend/app/schemas/v1/: contents.py
backend/app/services/v1/: extract_ketwords.py  generate_ai_contents.py  json_decoding.py
backend/app/utils/: error_codes.py  error_response_builder.py  errorhandler.py  logging.py  slack_notifer.py
frontend/: .env.development  .env.local  .env.production  Dockerfile  ProdDockerfile  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/.next/: app-build-manifest.json  react-loadable-manifest.json  trace
frontend/.next/server/: middleware-react-loadable-manifest.js  server-reference-manifest.json  webpack-runtime.js
frontend/.next/server/app/: page.js  page_client-reference-manifest.js
frontend/.next/server/vendor-chunks/: @floating-ui.js  @radix-ui.js  @swc.js  aria-hidden.js  class-variance-authority.js  clsx.js  get-nonce.js  lucide-react.js  next-themes.js  next.js  react-remove-scroll-bar.js  react-remove-scroll.js  tailwind-merge.js  (+4 more)
frontend/src/app/: layout.tsx  page.tsx
frontend/src/store/: ThemeContext.tsx
frontend/src/styles/: globals.css
(+135 files in other folders)
